# cx-overlaps

./: .gitignore  README.md  SimilarityAnalysis.bat  SimilarityAnalysisUnigram.bat  pyproject.toml  run_project.sh  run_similarity.sh  run_similarity_unigram.sh
project/PROJECT1/: config.yaml
project/PROJECT1/input/sample_cxoutput/: example.cex.cex
project/PROJECT1/output/: result.csv
src/: BaseFreqDictReader.py  IRSystemHelper.py  SimilarityAnalysis.py  cx-extraction.py
